Bug 273388 - [view-transitions] css/css-view-transitions/content-with-clip.html fails due to duplicate pseudo renderers
Summary: [view-transitions] css/css-view-transitions/content-with-clip.html fails due ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Matt Woodrow
URL:
Keywords: InRadar
Depends on:
Blocks: css-view-transitions
  Show dependency treegraph
 
Reported: 2024-04-29 00:31 PDT by Matt Woodrow
Modified: 2024-04-29 20:19 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Woodrow 2024-04-29 00:31:04 PDT
The root element is included in the old state, but not the new, and is the first name in the namedElements map.

Each frame during updatePseudoElementTree, `buildPseudoElementGroup` is called for the root, and nothing is created (as expected)..

currentGroup then gets moved to the previous sibling, which is nullptr, and then is in a broken state for further iterations.

All other iterated names then create new renderers, without removing the existing ones.
Comment 1 Radar WebKit Bug Importer 2024-04-29 00:31:16 PDT
<rdar://problem/127217265>
Comment 2 Matt Woodrow 2024-04-29 00:35:18 PDT
Pull request: https://github.com/WebKit/WebKit/pull/27859
Comment 3 EWS 2024-04-29 13:00:23 PDT
Committed 278120@main (500fd5004df1): <https://commits.webkit.org/278120@main>

Reviewed commits have been landed. Closing PR #27859 and removing active labels.