[view-transitions] css/css-view-transitions/content-with-clip.html fails due to duplicate pseudo renderers. https://bugs.webkit.org/show_bug.cgi?id=273388 <rdar://127217265>

Reviewed by Tim Nguyen.

The root element is included in the old state, but not the new, and is the first
name in the namedElements map.

Each frame during updatePseudoElementTree, `buildPseudoElementGroup` is called
for the root, and nothing is created (as expected)..

currentGroup then gets moved to the previous sibling, which is nullptr, and then
is in a broken state for further iterations.

All other iterated names then create new renderers, without removing the
existing ones.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/updating/RenderTreeUpdaterViewTransition.cpp:
(WebCore::RenderTreeUpdater::ViewTransition::updatePseudoElementTree):

Canonical link: https://commits.webkit.org/278120@main